# haskell_librairies

./: README.md
articles/: CabalPlan.md  Csp.md  SoapRequest.md  TextXml.md
src/CSP/: CSP.cabal  CSP.hs  LICENSE
src/SoapRequest/: SoapRequest.cabal  SoapRequest.hs
src/Template/: Template.cabal  Template.hs
src/TextXml/: TextXml.cabal  TextXml.hs  cabal.project
