cabal-version:      3.0
name:               CSP
version:            0.1.0.0
synopsis:           Exemples de résolution de deux problèmes de satisfaction de contraintes
description:        Méthode de problèmes de statisfaction de contraintes

license:            MIT
license-file:       LICENSE
author:             mlier
maintainer:         mlier@free.fr
build-type:         Simple

common warnings
    ghc-options: -Wall

executable csp
    import:           warnings
    main-is:          CSP.hs
    build-depends:    base ^>=4.17.2.1
                    , csp
                    , unordered-containers
                    , pretty-simple

    default-language: Haskell2010
