cabal-version:      3.0
name:               Soaprequest
version:            0.1.0.0
synopsis:           Un exemple de projet cabal minimal
description:        Un exemple de projet cabal minimal

license:            MIT
license-file:       LICENSE
author:             mlier
maintainer:         mlier@free.fr
build-type:         Simple

common warnings
    ghc-options: -Wall

executable soaprequest
    import:           warnings
    main-is:          SoapRequest.hs
    --other-modules:    SoapRequest
    build-depends:    base ^>=4.17.2.1
                    , text
                    , containers
                    , bytestring
                    , soap
                    , soap-tls
                    , xml-conduit
                    , xml-conduit-writer
                    , http-client

    default-language: Haskell2010
