cabal-version:      3.0
name:               Template
version:            0.1.0.0
synopsis:           Un exemple de projet cabal minimal
description:        Un exemple de projet cabal minimal

license:            MIT
license-file:       LICENSE
author:             mlier
maintainer:         mlier@free.fr
build-type:         Simple

common warnings
    ghc-options: -Wall

executable Template
    import:           warnings
    main-is:          Template.hs
    build-depends:    base ^>=4.17.2.1
                    , text

    default-language: Haskell2010
