cabal-version:      3.0
name:               TextXml
version:            0.1.0.0
synopsis:           Un exemple de projet cabal minimal
description:        Un exemple de projet cabal minimal

license:            MIT
license-file:       LICENSE
author:             mlier
maintainer:         mlier@free.fr
build-type:         Simple

with-compiler:      ghc-8.6.3

common warnings
    ghc-options: -Wall

executable TextXml
    import:           warnings
    main-is:          TextXml.hs
    build-depends:    base ^>=4.17.2.1
                    , text
                    , containers
                    , xml-conduit
                    , xml-hamlet
                    , xml-types

    default-language: Haskell2010
